src/test/ui/moves/move-out-of-slice-1.stderr
error[E0508]: cannot move out of type `[A]`, a non-copy slice
  --> $DIR/move-out-of-slice-1.rs:8:13
   |
LL |         box [a] => {}, //~ ERROR cannot move out of type `[A]`, a non-copy slice
   |             ^-^
   |             ||
   |             |hint: to prevent move, use `ref a` or `ref mut a`
   |             cannot move out of here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0508`.
